--- a/GigaWebMvc/appsettings.json
+++ b/GigaWebMvc/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GigaWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=GigaWebMvcContext-a03820ce-76b8-44bc-bd6b-4c5a8cc01638;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
