MySQL adaptation and first migration

--- a/GigaWebMvc/appsettings.json
+++ b/GigaWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "GigaWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=GigaWebMvcContext-a03820ce-76b8-44bc-bd6b-4c5a8cc01638;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "GigaWebMvcContext": "Server=DJALMA\\DJX;user=sa;password=jr1247040147;Database=GigaWebMvcAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
